--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#3367D6">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="apple-touch-icon" href="icons/icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png"> <!-- ✅ No 'icons/' -->
 
   <!-- Primary CDN scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
