--- a/index.html
+++ b/index.html
@@ -431,5 +431,9 @@
     }
   }
 </script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+<script src="service.js"></script>
+
 </body>
 </html>
