--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
       document.write('<script src="./lib/jspdf.umd.min.js"><\/script>');
     }
   </script>
+<!-- Firebase Core -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+
+<!-- Firebase Firestore -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+
+<!-- Your script -->
+<script src="service.js"></script>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
