--- a/index.html
+++ b/index.html
@@ -443,6 +443,22 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
 <script src="service.js"></script>
+  <!-- Existing HTML content -->
+<section id="editor">
+  <input type="text" id="titleInput" placeholder="Title">
+  <textarea id="contentTextarea" placeholder="Write your journal here..."></textarea>
+  <button id="saveBtn">Save Journal</button>
+</section>
+
+<div id="journalList"></div>
+
+<!-- ======= Firebase Scripts & Your service.js ======= -->
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+<script src="service.js"></script>
+</body>
+</html>
+
 
 </body>
 </html>
