--- a/index.html
+++ b/index.html
@@ -439,9 +439,13 @@
       localStorage.setItem('journalEntries', JSON.stringify(saved));
     }
   }
-<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
-<script src="service.js"></script>
+<!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+
+  <!-- Your Script -->
+  <script src="service.js"></script>
+
 
 </body>
 </html>
